OSCogVM source as per VMMaker-oscog.20.  Fixed primitiveObjectPointsTo. Reentrant FFI plugin (for x86).
git-svn-id: http://www.squeakvm.org/svn/squeak/branches/Cog@2232 fa1542d4-bde8-0310-ad64-8ed1123d492a

--- a/platforms/unix/plugins/SqueakFFIPrims/Makefile.in
+++ b/platforms/unix/plugins/SqueakFFIPrims/Makefile.in
@@ -2,16 +2,16 @@
 # 
 # Author: ian.piumarta@inria.fr
 # 
-# Last edited: 2003-01-28 10:59:01 by piumarta on emilia.inria.fr
+# Last edited: Dec  1 2009 by eliot miranda
 
 [make_cfg]
 [make_plg]
 
-TARGET	= SqueakFFIPrims$a
+TARGET= SqueakFFIPrims$a
 
-OBJS	= SqueakFFIPrims$o ffi-test$o $(FFI_O)
+OBJS= SqueakFFIPrims$o sqFFIPlugin$o sqManualSurface$o
 
-XINCLUDES	= [includes]
+XINCLUDES= [includes]
 
 $(TARGET) : $(OBJS) Makefile
 	$(LINK) $(TARGET) $(OBJS)
