OSCogVM source as per VMMaker-oscog.21.  Fix struct return, indexing return type spec corrrectly and not being confused between the struct return size and whether return is via registers or not.  Include the FFI test funcs in the plugin. Backwards-compatibility access to ffi error code.
git-svn-id: http://www.squeakvm.org/svn/squeak/branches/Cog@2234 fa1542d4-bde8-0310-ad64-8ed1123d492a

--- a/platforms/unix/plugins/SqueakFFIPrims/Makefile
+++ b/platforms/unix/plugins/SqueakFFIPrims/Makefile
@@ -9,7 +9,7 @@
 
 TARGET= SqueakFFIPrims$a
 
-OBJS= SqueakFFIPrims$o sqFFIPlugin$o sqManualSurface$o
+OBJS= SqueakFFIPrims$o sqFFIPlugin$o sqManualSurface$o sqFFITestFuncs$o
 
 XINCLUDES= [includes]
 
