Uniquify the disabledPligins list and eliminate the lib-ffi option for the unix build.
git-svn-id: http://www.squeakvm.org/svn/squeak/branches/Cog@2247 fa1542d4-bde8-0310-ad64-8ed1123d492a

--- a/platforms/unix/config/configure.ac
+++ b/platforms/unix/config/configure.ac
@@ -378,7 +378,7 @@ AC_SUBST(ext_plugins)
 #fi
 
 if test "${disabled_plugins}" != ""; then
-  echo ${disabled_plugins} | tr ' ' '\012' > plugins.exc
+  echo ${disabled_plugins} | tr ' ' '\012' | sort -u > plugins.exc
 fi
 
 # for some reason configure leaves an empty a.out lying around
