Fix bug in Skyeye Makefile that fails to compile 32-bit on a 64-bit system.
git-svn-id: http://www.squeakvm.org/svn/squeak/branches/Cog@2252 fa1542d4-bde8-0310-ad64-8ed1123d492a

--- a/processors/ARM/skyeye/arch/arm/Makefile.in
+++ b/processors/ARM/skyeye/arch/arm/Makefile.in
@@ -125,7 +125,7 @@ CXX = @CXX@
 CXXDEPMODE = @CXXDEPMODE@
 CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
-DEFS = -DMODET -g -O2 -D_FILE_OFFSET_BITS=64 -DSTANDALONE -DDEFAULT_INLINE=0 
+DEFS = -DMODET $(CFLAGS) -D_FILE_OFFSET_BITS=64 -DSTANDALONE -DDEFAULT_INLINE=0 
 DEPDIR = @DEPDIR@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
