Fix filename character encoding for Mac OS X (in Info.plist; use UTF-8). Update minimal VMMaker image to latest trunk.
git-svn-id: http://www.squeakvm.org/svn/squeak/branches/Cog@2275 fa1542d4-bde8-0310-ad64-8ed1123d492a

--- a/macbuild/CoreVM.plist
+++ b/macbuild/CoreVM.plist
@@ -438,7 +438,7 @@
 	<key>SqueakDebug</key>
 	<integer>0</integer>
 	<key>SqueakEncodingType</key>
-	<string>macintosh</string>
+	<string>UTF-8</string>
 	<key>SqueakExplicitWindowOpenNeeded</key>
 	<false/>
 	<key>SqueakFloatingWindowGetsFocus</key>
