--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ vm/build/Makefile
 vm/build/config.last
 vm/build/compiler_check
 vm/build/rvm
+vm/RoarVM.xcodeproj/*.pbxuser
+vm/RoarVM.xcodeproj/*.perspectivev3
