Customized googletest Xcode project for RoarVM.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ vm/build/compiler_check
 vm/build/rvm
 vm/RoarVM.xcodeproj/*.pbxuser
 vm/RoarVM.xcodeproj/*.perspectivev3
+vm/build/Debug/
+vm/build/RoarVM.build/
