--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ vm/build/rvm
 vm/RoarVM.xcodeproj/*.pbxuser
 vm/RoarVM.xcodeproj/*.perspectivev3
 vm/build/Debug/
+vm/build/Release/
 vm/build/RoarVM.build/
 vm/build/libgtest.a
 vm/build/rvm-test
