--- a/platforms/unix/config/Makefile.install
+++ b/platforms/unix/config/Makefile.install
@@ -19,8 +19,8 @@ install-squeak : $(squeak)
 	$(MKINSTALLDIRS) $(ROOT)$(plgdir)
 	$(MKINSTALLDIRS) $(ROOT)$(bindir)
 	$(INSTALL_PROG) $(squeak) $(ROOT)$(plgdir)
-	$(INSTALL_PROG) $(squeaksh) $(ROOT)$(exec_prefix)/$(squeak)
-	$(INSTALL_PROG) $(binsqueaksh) $(ROOT)$(bindir)/$(squeak)
+	$(INSTALL_SCRIPT) $(squeaksh) $(ROOT)$(exec_prefix)/$(squeak)
+	$(INSTALL_SCRIPT) $(binsqueaksh) $(ROOT)$(bindir)/$(squeak)
 	if test -n "$(VM_APP_ICONS)"; then \
 	  $(INSTALL_DATA) $(ICONS) $(ROOT)$(VM_APP_ICONS); \
 	fi
