OSCogVM StackToRegisterMappingCogit as per VMMaker-oscog.43. Eliminate some warnings in the CoInterpreter. Stop attemptToSwitchToMachineCode: being inlined to fix apparent optimization bug at -O2 on linux gcc 4.1.2.
Lower the cointerpreter's optimization level to -O1 on linux to avoid apparent
flakiness with the gcc 4.1.2 compiler at -O2.
Fix INSTALL_SCRIPT usage on linux.


git-svn-id: http://www.squeakvm.org/svn/squeak/branches/Cog@2341 fa1542d4-bde8-0310-ad64-8ed1123d492a

--- a/platforms/unix/config/make.cfg.in
+++ b/platforms/unix/config/make.cfg.in
@@ -72,6 +72,7 @@ SHELL=		@SHELL@
 MKINSTALLDIRS=	mkdir -p
 INSTALL=	@INSTALL@
 INSTALL_PROG=	@INSTALL_PROGRAM@ $(INSTALL_ARGS)
+INSTALL_SCRIPT=	@INSTALL_SCRIPT@ $(INSTALL_ARGS)
 INSTALL_DATA=	@INSTALL_DATA@ $(INSTALL_ARGS)
 UNINSTALL=	$(SHELL) $(cfgdir)/uninstall
 AS=		@AS@
