--- a/platforms/unix/vm/Makefile.in
+++ b/platforms/unix/vm/Makefile.in
@@ -68,6 +68,11 @@ sqUnixExternalPrims$o sqUnixMain$o : ../config.h $(topdir)/platforms/unix/vm/dlf
 
 [make_targets]
 
+# Ensure the cointerpreter is compiled with less aggressive optimization.  At
+# least with gcc 4.1.2 compiling with -O2 results in an apparently flakey VM.
+gcc3x-cointerp$o : $(srcdir)/vm/gcc3x-cointerp.c
+	$(COMPILE) gcc3x-cointerp$o -O1 -fno-omit-frame-pointer -momit-leaf-frame-pointer -mno-rtd -mno-accumulate-outgoing-args $(srcdir)/vm/gcc3x-cointerp.c
+
 # Ensure the cogit is compiled with less aggressive optimization.  The cogit
 # contains a function that does two alloca's which is miscompiled by a number of
 # optimizing compilers (at least gcc 4.0.x 4.1.x & Intel icc 10.1) under the
