UnixOSProcessPlugin now works with generated files. Image has the plugin loaded. Lot's of ignores... maybe next time I can ignore xcodeproj also :)

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ image/JMMFixBackToTrunk.2.cs
 image/package-cache
 image/PharoDebug.log
 push.sh
+image/SqueakDebug.log
+notes/
+platforms/iOS/plugins/FT2Plugin/build/
+platforms/iOS/plugins/SqueakLocale/build/
+platforms/iOS/plugins/UnixOSProcessPlugin/build/
+platforms/iOS/vm/build 
+src/
+Compiled/
