Added Message_Queue that uses separate incoming channels.
This queue should reduce contention on the lock, that I saw before.
However, that makes it necessary to search all the channels at the
receivers end for incoming messages. Needs to be benchmarked.

--- a/vm/src/makefiles/Makefile.common
+++ b/vm/src/makefiles/Makefile.common
@@ -224,6 +224,7 @@ RVM_HEADERS = \
   \
   abstract_message_queue.h \
   shared_memory_message_queue.h \
+  shared_memory_message_queue_per_sender.h \
   ilib_message_queue.h \
   tilera_chip_to_chip_message_queue.h \
   host_pci_info.h \
@@ -475,6 +476,7 @@ OBJS += \
   buffered_channel.opt \
   posix_os_interface.opt \
   shared_memory_message_queue.opt \
+  shared_memory_message_queue_per_sender.opt \
   thread_memory_semantics.opt \
   dummy_cpu_coordinate.opt \
 
