--- a/platforms/unix/config/make.ext.in
+++ b/platforms/unix/config/make.ext.in
@@ -2,7 +2,7 @@
 # 
 # Author: Ian.Piumarta@inria.fr
 # 
-# Last edited: 2003-08-07 09:09:59 by piumarta on emilia.inria.fr
+# Last edited: Sep  1 18:56:15 PDT 2010 by eliot; LINKXX for plugins using C++
 
 o		= .lo
 a		= .la
@@ -15,5 +15,8 @@ COMPILE.cpp	= $(LIBTOOL) --mode=compile \
 		  $(INCLUDES) $(XINCLUDES) $(CPPFLAGS) $(XCPPFLAGS) -c -o
 LINK		= $(LIBTOOL) --mode=link \
 		  $(CC) $(CFLAGS) $(XCFLAGS) \
+		  $(LDFLAGS) $(XLDFLAGS) -avoid-version -module -rpath $(plgdir) -o
+LINKXX		= $(LIBTOOL) --mode=link \
+		  $(CXX) $(CFLAGS) $(XCFLAGS) \
 		  $(LDFLAGS) $(XLDFLAGS) -avoid-version -module -rpath $(plgdir) -o
 RANLIB		= :
