OSCogVM StackToRegisterMappingCogit source as per VMMaker-oscog.46. Fix miscompilation of SmallInteger const bitOr:/bitAnd: SmallInteger const. Reduce optimization of heartbeat and interpreter to -O1.
git-svn-id: http://www.squeakvm.org/svn/squeak/branches/Cog@2349 fa1542d4-bde8-0310-ad64-8ed1123d492a

--- a/platforms/unix/vm/Makefile.in
+++ b/platforms/unix/vm/Makefile.in
@@ -77,7 +77,8 @@ sqUnixHeartbeat$o : $(topdir)/platforms/unix/vm/sqUnixHeartbeat.c
 # Ensure the cointerpreter is compiled with less aggressive optimization.  At
 # least with gcc 4.1.2 compiling with -O2 results in an apparently flakey VM.
 #gcc3x-cointerp$o : $(srcdir)/vm/gcc3x-cointerp.c
-#	$(COMPILE) gcc3x-cointerp$o -O1 -fno-omit-frame-pointer -momit-leaf-frame-pointer -mno-rtd -mno-accumulate-outgoing-args $(srcdir)/vm/gcc3x-cointerp.c
+# so flakey the Squeak4.2-10856-beta.image image won't even start-up.
+	$(COMPILE) gcc3x-cointerp$o -O1 -fno-omit-frame-pointer -momit-leaf-frame-pointer -mno-rtd -mno-accumulate-outgoing-args $(srcdir)/vm/gcc3x-cointerp.c
 
 # Ensure the cogit is compiled with less aggressive optimization.  The cogit
 # contains a function that does two alloca's which is miscompiled by a number of
