Cleanup tracked_ptr usage.
- removed uncessesary conversion methods
- added files to makefile
- added the make-target to Xcode to be able to test make from the IDE

--- a/vm/src/makefiles/Makefile.common
+++ b/vm/src/makefiles/Makefile.common
@@ -241,6 +241,8 @@ RVM_HEADERS = \
   \
   debug_store_checks.h \
   debug_helper.h \
+  tracked_ptr.h \
+  tracked_ptr_registry.h \
   
 
 ifeq "$(PLATFORM)" "Intel"
