--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ platforms/iOS/plugins/SqueakLocale/build/
 platforms/iOS/plugins/UnixOSProcessPlugin/build/
 platforms/iOS/vm/build 
 src/
+stacksrc/
 Compiled/
 /build/
 /platforms/iOS/vm/build/Distribution/Squeak.app/Contents/MacOS/Squeak
@@ -62,3 +63,10 @@ Compiled/
 /platforms/iOS/vm/build/SqueakPureObjcCogVM.build/SqueakPureObjcCogVM.pbxindex/strings.pbxstrings/strings
 /platforms/iOS/vm/build/SqueakPureObjcCogVM.build/SqueakPureObjcCogVM.pbxindex/subclasses.pbxbtree
 /platforms/iOS/vm/build/SqueakPureObjcCogVM.build/SqueakPureObjcCogVM.pbxindex/symbols0.pbxsymbols
+/platforms/iOS/vm/build/SqueakPureObjcCogVM.build/Distribution-iphoneos/SqueakNoOGLIPhone.build/build-state.dat
+/platforms/iOS/vm/build/SqueakPureObjcCogVM.build/Distribution-iphoneos/SqueakNoOGLIPhone.build/SqueakNoOGLIPhone.dep
+/stacksrc/examplePlugins.ext
+/stacksrc/vm/exampleSqNamedPrims.h
+/stacksrc/vm/gcc3x-interp.c
+/stacksrc/vm/interp.c
+/stacksrc/vm/interp.h
