--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ vm/build/compiler_check
 vm/build/rvm
 vm/RoarVM.xcodeproj/*.pbxuser
 vm/RoarVM.xcodeproj/*.perspectivev3
+xcuserdata
+*xcworkspace
 vm/build/Debug/
 vm/build/Release/
 vm/build/RoarVM.build/
