--- a/vm/src/makefiles/Makefile.common
+++ b/vm/src/makefiles/Makefile.common
@@ -550,7 +550,7 @@ else
 endif
 
 
-rvm: $(OBJS) main.opt
+$(EXECUTABLE): $(OBJS) main.opt
 	$(CXX) $(LDFLAGS) $(OBJS) main.opt -lm $(TILERA_LIBS) $(LIBS_LINKING) -o $@
 
 # Test Related targets, we use the googletest framework for unit tests
@@ -581,5 +581,7 @@ test: rvm-test
 clean:
 	rm -f *.o *.opt $(EXECUTABLE) compiler_check rvm-test libgtest.a $(TEST_OBJS)
 
+install: $(EXECUTABLE)
+	install $(EXECUTABLE) /usr/local/bin
 
 .PHONY: all clean run test run_pci test_pci info
